# borf

./: README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml
.claude/.agents/: refactoring-ui-designer.md
docs/: crossfade-test-plan.md
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_phase1.sql  0002_phase2_itunes.sql  0003_phase3_playlists.sql  0004_itunes_playlist_hierarchy.sql  0005_phase4_metadata_tags_watcher.sql  0006_phase5_play_history.sql  0007_phase6_search_indexes.sql  0008_phase7_unified_palette_search.sql  0009_phase8_fix_playlist_fts_triggers.sql
src-tauri/src/: ARCHITECTURE.md  lib.rs  media_controls.rs  state.rs
src-tauri/src/audio/: cache.rs  decode.rs  engine.rs  events.rs  mod.rs  playback.rs  tests.rs  worker.rs
src-tauri/src/commands/: app.rs  audio.rs  exports.rs  history.rs  imports.rs  library.rs  media_controls.rs  mod.rs  playlists.rs  stats.rs  tags.rs
src-tauri/src/db/: database.rs  exports.rs  history.rs  itunes_import.rs  migrations.rs  mod.rs  models.rs  playlists.rs  search.rs  settings.rs  songs.rs  stats.rs  tags.rs  utils.rs
src-tauri/src/db/tests/: migrations.rs  mod.rs  playlists.rs  search.rs  songs_tags_settings.rs  stats_exports.rs
src-tauri/src/imports/: itunes.rs  mod.rs
src-tauri/src/imports/itunes/: matcher.rs  mod.rs  parser.rs  progress.rs  tests.rs  types.rs
src/lib/: api.ts  (+2 more)
website/: Caddyfile  Dockerfile  app.js  index.html  styles.css
(+58 files in other folders)
