[package]
name = "tauri-app"
version = "0.1.0"
description = "borf desktop music player"
authors = ["Juan Matus"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
lofty = "0.23.2"
log = "0.4"
notify = "6.1"
plist = "1.8"
rayon = "1.11"
rodio = { version = "0.20", features = ["symphonia-all"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono"] }
souvlaki = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["all"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2.5"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
